Open images in new tab

--- a/Gallery.html
+++ b/Gallery.html
@@ -62,25 +62,25 @@
 						<!--<div class="BodyText">-->	
 							<div class="gallery_photo">
 								<div class="gallery_photo_pos">
-									<a href="https://farm1.staticflickr.com/133/361617271_0bc9037f65_b.jpg"><img src ="images/GalleryPhotos/Tree1.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/ashleytheartist2002/361617271/sizes/m/in/photostream/-->
+									<a href="https://farm1.staticflickr.com/133/361617271_0bc9037f65_b.jpg" target="_blank"><img src ="images/GalleryPhotos/Tree1.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/ashleytheartist2002/361617271/sizes/m/in/photostream/-->
 									<div class="uploader">
 										<p>by: Hans Moleman</p>
 									</div>
 								</div>
 								<div class="gallery_photo_pos">
-									<a href="https://farm5.staticflickr.com/4032/4269187460_a7fac23138_b.jpg"><img src ="images/GalleryPhotos/Tree2.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/horiavarlan/4269187460/sizes/m/in/photostream/-->
+									<a href="https://farm5.staticflickr.com/4032/4269187460_a7fac23138_b.jpg" target="_blank"><img src ="images/GalleryPhotos/Tree2.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/horiavarlan/4269187460/sizes/m/in/photostream/-->
 									<div class="uploader">
 										<p>by: Martin Prince</p>
 									</div>
 								</div>
 								<div class="gallery_photo_pos">		
-									<a href="https://farm8.staticflickr.com/7121/6956135574_07034cc322_b.jpg"><img src ="images/GalleryPhotos/Tree3.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/dougbelshaw/6956135574/sizes/m/in/photostream/-->
+									<a href="https://farm8.staticflickr.com/7121/6956135574_07034cc322_b.jpg" target="_blank"><img src ="images/GalleryPhotos/Tree3.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/dougbelshaw/6956135574/sizes/m/in/photostream/-->
 									<div class="uploader">
 										<p>by: Moe Szyslak</p>
 									</div>
 								</div>
 								<div class="gallery_photo_pos">
-									<a href="https://farm3.staticflickr.com/2192/2355537929_72de294c5f_o.jpg"><img src ="images/GalleryPhotos/Tree4.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/tobyandtaishan/2355537929/sizes/m/in/photostream/-->
+									<a href="https://farm3.staticflickr.com/2192/2355537929_72de294c5f_o.jpg" target="_blank"><img src ="images/GalleryPhotos/Tree4.jpg" width="200" height="120" alt="gallery_img"/></a> <!--photo credit: https://secure.flickr.com/photos/tobyandtaishan/2355537929/sizes/m/in/photostream/-->
 									<div class="uploader">
 									<p>by: Patty Bouvier</p>
 									</div>
