Adding Fonts and comments

--- a/About.html
+++ b/About.html
@@ -75,9 +75,9 @@
 							<div class ="Couple_Photo">
 								<img src = "images/Couple_Photo.jpg" alt = "couple photo"/>
 							</div> <!-- end Couple_Photo -->
-					</div> <!--end of cols cols5 -->
+					</div> <!--end of About body text -->
 				</section> <!-- end section first col -->
-			</div> <!--end of bodytext div-->
+			</div> <!--end of cols cols5-->
 		</div> <!--end of container div-->
 		
 	</body>
