--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -124,9 +124,9 @@
 										Price: $40
 									</p>
 								</div>
-							</div>
+							</div> <!--end of bonsai tree gallery-->
 						</section>
-					</div>
+					</div>	<!--end of cols cols5-->
 		</div>	
 	</body>
 </html>
