--- a/Gallery.html
+++ b/Gallery.html
@@ -86,11 +86,11 @@
 									</div>
 								</div>
 							
-							</div>
+							</div> <!--end of gallery photo div-->
 						<!--</div>--> <!--end of cols cols5 -->
 					
 					</section> <!-- end section first col -->
-			</div> <!--end of bodytext div-->	
+			</div> <!--end of cols cols5-->	
 		</div> <!--end of container div-->
 		
 	</body>
