--- a/Home.html
+++ b/Home.html
@@ -76,9 +76,9 @@
 							<div class="infograph2">
 								<img src="images/bonsai_infograph2.png" alt= "Bonsai water and trim" />
 							</div>-->
-					</div> <!--end of cols cols5 -->
+					</div> <!--end of Body text -->
 				</section> <!-- end section first col -->	
-			</div> <!--end of bodytext div-->
+			</div> <!--end of cols cols5-->
 		</div> <!--end of container div-->
 		
 	</body>
