--- a/FAQ.html
+++ b/FAQ.html
@@ -89,10 +89,10 @@
 										<img src="images/bonsai_infograph2.png" alt= "Bonsai water and trim" />
 									</div>
 
-						</div> <!--end of cols cols5 -->
+						</div> <!--end Body Text -->
 					
 					</section> <!-- end section first col -->
-			</div> <!--end of bodytext div-->	
+			</div> <!--end of cols cols5-->	
 		</div> <!--end of container div-->
 		
 	</body>
