adding product pages

--- a/Product_page4.html
+++ b/Product_page4.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>White/Pink Azalea</title>
+		<title>Pastel Pink Azalea</title>
 		<link rel="stylesheet" type="text/css" href="style.css" /> <!-- stylesheet for desktop -->
 		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/>  <!-- stylesheet for tablet devices -->
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> <!-- stylesheet for mobil devices -->
@@ -60,10 +60,10 @@
 			<div class="cols cols5">
 				<section class="first col">
 					
-					<h1>White/Pink Azalea</h1>
+					<h1>Pastel Pink Azalea</h1>
 					<br />
 					<div class="product_photo">
-						<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/> <br/>
+						<img src = "images/Bonsai/Bonsai4.jpg" width="150" height="200" alt = "bonsai tree"/> <br/>
 						<div class = "Continue_shop">
 							<a href = "Bonsai_trees.html"><img src = "images/Continue_Shop.png" alt = "Continue shopping"/></a>
 						</div>
@@ -73,7 +73,7 @@
 						<div class = "ProductText">
 							<p>
 								This lovely azalea bonsai has delicate <br /> 
-								petals of white and pink. This bonsai tree <br />
+								petals of pastel pink. This bonsai tree <br />
 								makes the perfect gift for any occasion!<br />
 								Our bonsai trees are most popular as <br />
 								housewarming presents.<br />
