--- a/Product_page.html
+++ b/Product_page.html
@@ -72,11 +72,7 @@
 						</div>
 						<div class = "ProductText">
 							<p>
-								This lovely azalea bonsai has delicate <br /> 
-								petals of white and pink. This bonsai tree <br />
-								makes the perfect gift for any occasion!<br />
-								Our bonsai trees are most popular as <br />
-								housewarming presents.<br />
+								This lovely azalea bonsai has delicate petals of white and pink. This bonsai tree makes the perfect gift for any occasion! Our bonsai trees are most popular as housewarming presents.
 							</p>
 						</div>
 					</div> <!--end of cols cols5 -->
