Created content for products

--- a/FAQ.html
+++ b/FAQ.html
@@ -73,7 +73,7 @@
 									<br/><br/>
 
 									<i>Do you ship to international addresses?</i> <br/>
-									Unfortunately due the to nature of our delicate bonsai trees, we do not ship internationally. 
+									Unfortunately due to the nature of our delicate bonsai trees, we do not ship internationally. 
 									<br/><br/>
 									
 									<i>How do I take care of a bonsai tree?</i> <br/>
