--- a/Product_page2.html
+++ b/Product_page2.html
@@ -72,11 +72,7 @@
 						</div>
 						<div class = "ProductText">
 							<p>
-								This lovely azalea bonsai has delicate <br /> 
-								petals of pastel. This bonsai tree <br />
-								makes the perfect gift for any occasion!<br />
-								Our bonsai trees are most popular as <br />
-								housewarming presents.<br />
+								These pastel petals will surely put on a darling smile on your mother's face for her birthday, Mother's Day, or a "Just Because" present. Ditch the bouquet and opt for the bonsai!
 							</p>
 						</div>
 					</div> <!--end of cols cols5 -->
