--- a/Shop.html
+++ b/Shop.html
@@ -71,12 +71,12 @@
 									<th>Total</th>
 												</tr>
 												<tr>
-												<td>Tree 1</td>
+												<td>White/Pink Azalea</td>
 												<td>2</td>
 												<td>$60</td>
 												</tr>
 												<tr>
-												<td>Tree 2</td>
+												<td>Pastel Azalea</td>
 												<td>1</td>
 												<td>$45</td>
 												<td>$105</td>
