--- a/Product_page3.html
+++ b/Product_page3.html
@@ -72,11 +72,7 @@
 						</div>
 						<div class = "ProductText">
 							<p>
-								This lovely azalea bonsai has delicate <br /> 
-								petals of pink. This bonsai tree <br />
-								makes the perfect gift for any occasion!<br />
-								Our bonsai trees are most popular as <br />
-								housewarming presents.<br />
+								This pink azalea will give brighten up your living area with it's presence, especially during the Spring and Summer seasons as the sun rays peek through your blinds and dance on this bonsai tree's delicate petals.
 							</p>
 						</div>
 					</div> <!--end of cols cols5 -->
