--- a/Product_page4.html
+++ b/Product_page4.html
@@ -72,11 +72,7 @@
 						</div>
 						<div class = "ProductText">
 							<p>
-								This lovely azalea bonsai has delicate <br /> 
-								petals of pastel pink. This bonsai tree <br />
-								makes the perfect gift for any occasion!<br />
-								Our bonsai trees are most popular as <br />
-								housewarming presents.<br />
+								The pastel pink petals of this azalea bonsai tree gives off a soft romantic aura. Perfect unique gift for any occasion, especially as an alternative to flower bouquets.
 							</p>
 						</div>
 					</div> <!--end of cols cols5 -->
