Fixed logo and nav buttons so they are now viewable in Safari!

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img class ="logo" src = "images/Mini_Tree_Logo02.png" width="432" height="143" alt = "logo"/></a>
+				<a href = "Home.html"><img class ="logo" src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 		<div class = "shop_cart">
