--- a/Shop.html
+++ b/Shop.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Your Shopping Cart</title>
-		<link rel="stylesheet" type="text/css" href="shop.css" />
+		<link rel="stylesheet" type="text/css" href="Shop.css" />
 		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
 		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'> <!-- Font from Google Fonts -->
@@ -84,7 +84,7 @@
 								
 						</table>
 								<div class="Continue_shop2">
-									<a href="Bonsai_trees.html"><img src="images/Continue_shop.png" alt="Continue Shopping"/></a>
+									<a href="Bonsai_trees.html"><img src="images/Continue_Shop.png" alt="Continue Shopping"/></a>
 								</div>
 								<div class="Checkout">
 									<a href="Checkout.html"><img src="images/Checkout_Button.png" alt="Checkout"/></a>
