--- a/Checkout.html
+++ b/Checkout.html
@@ -79,8 +79,8 @@
 										<label for="mastercard">Mastercard</label>
 									</p>
 									<p>
-										<label for="name">Card No.:</label>
-										<input id="name" name="name" type="text" placeholder="XXX-XXXX-XXXX" required autofocus />
+										<label for="card">Card No.:</label>
+										<input id="card" name="card" type="text" placeholder="XXX-XXXX-XXXX" required autofocus />
 									</p>
 									<p>
 										<label for="address">Billing Address:</label>
