--- a/Checkout.html
+++ b/Checkout.html
@@ -83,12 +83,12 @@
 										<input id="card" name="card" type="text" placeholder="XXX-XXXX-XXXX" required autofocus />
 									</p>
 									<p>
-										<label for="address">Billing Address:</label>
-										<textarea id="address" name="address" rows=3 required></textarea>
+										<label for="billing">Billing Address:</label>
+										<textarea id="billing" name="billing" rows=3 required></textarea>
 									</p>
 									<p>
-										<label for="address">Shipping Address:</label>
-										<textarea id="address" name="address" rows=3 required></textarea>
+										<label for="shipping">Shipping Address:</label>
+										<textarea id="shipping" name="shipping" rows=3 required></textarea>
 									</p>
 										
 										<div class="Checkout">
