--- a/Contact.html
+++ b/Contact.html
@@ -70,8 +70,8 @@
 							<h1>Email Us</h1>
 								<form id="email">
 									<p>
-										<label for="email">Your email:</label>
-										<input id="email" name="email" type="text" placeholder="youremail@email.com" required autofocus />
+										<label for="youremail">Your email:</label>
+										<input id="youremail" name="youremail" type="text" placeholder="your email" required autofocus />
 									</p>
 									
 									<p>
