--- a/Checkout.html
+++ b/Checkout.html
@@ -67,7 +67,7 @@
 										<input id="name" name="name" type="text" placeholder="First and last name" required autofocus />
 									</p>
 									<p>
-										<label for="carddetail">Card Type:</label> <br/>
+										<label for="visa">Card Type:</label> <br/>
 									<p>
 										<input id="visa" name="cardtype" type="radio" />
 										<label for="visa">VISA</label>
