--- a/Testing_Buttons.html
+++ b/Testing_Buttons.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>FAQ Page</title>
-		<link rel="stylesheet" type="text/css" href="style.css" /> <!-- stylesheet for desktop -->
+		<link rel="stylesheet" type="text/css" href="Testing_buttons_style.css" /> <!-- stylesheet for desktop -->
 		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> <!-- stylesheet for tablet device -->
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> <!-- stylesheet for mobile device -->
 		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'> <!-- Font from Google Fonts -->
@@ -13,49 +13,27 @@
 	
 	<body>
 		<div id="container">
+		
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img class ="logo" src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
-			</div>
+					<a href = "Home.html"><img class ="logo" src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
+				</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.png" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-					
-			<div class="MenuButton">	<!--div for bonsai trees button-->
-				<div class="MenuButtonPos">
-				<a href = "Bonsai_trees.html"><img class ="button" src = "images/Bonsai_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-				</div>
-			</div>
 		
-		<div class="MenuButton">	<!--div for about button-->
-			<div class="MenuButtonPos"> 
-				<a href="About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for contact button-->
-			<div class="MenuButtonPos">
-				<a href = "Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<img class ="button" src = "images/FAQ_Button_DOWN.jpg" width="137" height="48" alt = "bonsai tree"/>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for Updates button-->
-			<div class="MenuButtonPos">
-				<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<a href = "Gallery.html"><img class ="button" src = "images/Gallery_button.png" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
+			<header>
+				<nav>
+					<ul>
+						<li><a href="#" class="menuButton">Shop</a></li>
+						<li><a href="#" class="menuButton">About</a></li>
+						<li><a href="#" class="menuButton">Contact</a></li>
+						<li><a href="#" class="menuButton">FAQ</a></li>
+						<li><a href="#" class="menuButton">Updates</a></li>
+						<li><a href="#" class="menuButton">Gallery</a></li>
+					</ul>
+				</nav>
+			</header>
 		
 			<div class="cols cols5">
 					<section class="first col">
