--- a/Updates.html
+++ b/Updates.html
@@ -18,7 +18,7 @@
 			</div>
 			
 			<div class = "shop_cart">
-				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
+				<a href = "Shop.html"><img src = "images/Shop_Cart.png" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
