I don't know what's going on anymore

--- a/Gallery.html
+++ b/Gallery.html
@@ -21,42 +21,15 @@
 				<a href = "Shop.html"><img src = "images/Shop_Cart.png" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 					
-			<div class="MenuButton">	<!--div for bonsai trees button-->
-				<div class="MenuButtonPos">
-				<a href = "Bonsai_trees.html"><img class ="button" src = "images/Bonsai_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-				</div>
-			</div>
-		
-		<div class="MenuButton">	<!--div for about button-->
-			<div class="MenuButtonPos"> 
-				<a href="About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for contact button-->
-			<div class="MenuButtonPos">
-				<a href = "Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<a href="FAQ.html"><img class ="button" src = "images/FAQ_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for Updates button-->
-			<div class="MenuButtonPos">
-				<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
-			</div>
-		</div>
-		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<img class ="button" src = "images/Gallery_button_DOWN.png" width="137" height="48" alt = "bonsai tree"/>
-			</div>
-		</div>
-		
+			<div class="buttons">
+							<a href="Bonsai_trees.html" class="menuButton">Shop</a>
+							<a href="About.html" class="menuButton">About</a>
+							<a href="Contact.html" class="menuButton">Contact</a>
+							<a href="FAQ.html" class="menuButton">FAQ</a>
+							<a href="Updates.html" class="menuButton">Updates</a>
+							<a href="Gallery.html" class="menuButton">Gallery</a>
+						</div>
+						
 			<div class="cols cols5">
 					<section class="first col">
 						<!--<div class="BodyText">-->	
