--- a/Testing_Buttons.html
+++ b/Testing_Buttons.html
@@ -22,19 +22,31 @@
 				<a href = "Shop.html"><img src = "images/Shop_Cart.png" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 		
+			<!--<header>
+					<nav>
+						<ul>
+							<li><a href="#" class="menuButton">Shop</a></li>
+							<li><a href="#" class="menuButton">About</a></li>
+							<li><a href="#" class="menuButton">Contact</a></li>
+							<li><a href="#" class="menuButton">FAQ</a></li>
+							<li><a href="#" class="menuButton">Updates</a></li>
+							<li><a href="#" class="menuButton">Gallery</a></li>
+						</ul>
+					</nav>	
+			</header>-->
+			
 			<header>
 				<nav>
 					<ul>
-						<li><a href="#" class="menuButton">Shop</a></li>
-						<li><a href="#" class="menuButton">About</a></li>
-						<li><a href="#" class="menuButton">Contact</a></li>
-						<li><a href="#" class="menuButton">FAQ</a></li>
-						<li><a href="#" class="menuButton">Updates</a></li>
-						<li><a href="#" class="menuButton">Gallery</a></li>
+							<b><li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
+							<li><a href="About.html" class="menuButton">About</a></li>
+							<li><a href="Contact.html" class="menuButton">Contact</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
+							<li><a href="Updates.html" class="menuButton">Updates</a></li>
+							<li><a href="Gallery.html" class="menuButton">Gallery</a></li></b>
 					</ul>
 				</nav>
 			</header>
-		
 			<div class="cols cols5">
 					<section class="first col">
 						<div class="BodyText">	
