--- a/Product_page.html
+++ b/Product_page.html
@@ -21,14 +21,18 @@
 				<a href = "Shop.html"><img src = "images/Shop_Cart.png" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 
-			<div class="buttons">
-							<a href="Bonsai_trees.html" class="menuButton">Shop</a>
-							<a href="About.html" class="menuButton">About</a>
-							<a href="Contact.html" class="menuButton">Contact</a>
-							<a href="FAQ.html" class="menuButton">FAQ</a>
-							<a href="Updates.html" class="menuButton">Updates</a>
-							<a href="Gallery.html" class="menuButton">Gallery</a>
-						</div>
+			<header>
+				<nav>
+					<ul>
+							<b><li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
+							<li><a href="About.html" class="menuButton">About</a></li>
+							<li><a href="Contact.html" class="menuButton">Contact</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
+							<li><a href="Updates.html" class="menuButton">Updates</a></li>
+							<li><a href="Gallery.html" class="menuButton">Gallery</a></li></b>
+					</ul>
+				</nav>
+			</header>
 		
 			<div class="cols cols5">
 				<section class="first col">
