--- a/Home.html
+++ b/Home.html
@@ -24,12 +24,12 @@
 			<header>
 				<nav>
 					<ul>
-							<b><li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
+							<li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
 							<li><a href="About.html" class="menuButton">About</a></li>
 							<li><a href="Contact.html" class="menuButton">Contact</a></li>
 							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
-							<li><a href="Gallery.html" class="menuButton">Gallery</a></li></b>
+							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
 					</ul>
 				</nav>
 			</header>
