--- a/Confirm.html
+++ b/Confirm.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Checkout</title>
 		<link rel="stylesheet" type="text/css" href="style.css" /> <!-- stylesheet for desktop -->
-		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/>  <!-- stylesheet for tablet devices -->
+		<link rel="stylesheet" media="(max-width:1024px)" type="text/css" href="tablet.css"/>  <!-- stylesheet for tablet devices -->
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> <!-- stylesheet for mobil devices -->
 		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'> <!-- Font from Google Fonts -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -41,6 +41,9 @@
 							<p>
 								Your order has been complete. Thank you for shopping with us!
 							</p>
+							<div class="Continue_shop3">
+								<a href="Bonsai_trees.html"><img src="images/Continue_Shop.png" alt="Continue Shopping"/></a>
+							</div>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->
 			</div> <!--end of bodytext div-->
