Product names are now links in product page

--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -41,9 +41,11 @@
 								<a href = "Product_page.html"><img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										White/Pink Azalea 
-										<br />
-										Price: $30
+										<a href = "Product_page.html">
+											White/Pink Azalea 
+											<br />
+											Price: $30
+										</a>
 									</p>
 								</div>
 							</div>
@@ -52,9 +54,12 @@
 								<a href = "Product_page2.html"><img src = "images/Bonsai/Bonsai2.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										Pastel Azalea
-										<br />
-										Price: $45
+										<a href = "Product_page2.html">
+											White/Pink Azalea 
+											Pastel Azalea
+											<br />
+											Price: $45
+										</a>
 									</p>
 								</div>
 							</div>
@@ -63,9 +68,12 @@
 								<a href = "Product_page3.html"><img src = "images/Bonsai/Bonsai3.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										Pink Azalea
-										<br />
-										Price: $25
+										<a href = "Product_page3.html">
+											White/Pink Azalea 
+											Pink Azalea
+											<br />
+											Price: $25
+										</a>
 									</p>
 								</div>
 							</div>
@@ -74,9 +82,12 @@
 								<a href = "Product_page4.html"><img src = "images/Bonsai/Bonsai4.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										Pastel Pink Azalea
-										<br />
-										Price: $30
+										<a href = "Product_page4.html">
+											White/Pink Azalea 
+											Pastel Pink Azalea
+											<br />
+											Price: $30
+										</a>
 									</p>
 								</div>
 							</div>
@@ -85,9 +96,12 @@
 								<a href = "Product_page5.html"><img src = "images/Bonsai/Bonsai5.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										Fuschia Azalea 
-										<br />
-										Price: $50
+										<a href = "Product_page5.html">
+											White/Pink Azalea 
+											Fuschia Azalea 
+											<br />
+											Price: $50
+										</a>
 									</p>
 								</div>
 							</div>
@@ -96,9 +110,12 @@
 								<a href = "Product_page6.html"><img src = "images/Bonsai/Bonsai6.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 								<div class="tree_name">
 									<p>
-										White/Pink Azalea 
-										<br />
-										Price: $40
+										<a href = "Product_page6.html">
+											White/Pink Azalea 
+											White/Pink Azalea 
+											<br />
+											Price: $40
+										</a>
 									</p>
 								</div>
 							</div> <!--end of bonsai tree gallery-->
