--- a/Gallery.html
+++ b/Gallery.html
@@ -25,7 +25,7 @@
 				<nav>
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
-							<li><a href="About.html" class="menuButton">About</a></li>
+							<li><a href="About.html" class="menuButton">About&nbsp;&nbsp;&nbsp;</a></li>
 							<li><a href="Contact.html" class="menuButton">Contact</a></li>
 							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
@@ -33,6 +33,16 @@
 					</ul>
 				</nav>
 			</header>
+			
+			<div class="upload_button">
+				<img src = "images/Upload_Button.png" onclick="upload()"/>
+			</div>
+			
+			<script>
+				function upload(){
+					var person=prompt("This would be an upload box for users to upload images from their device.");
+				}
+			</script>
 						
 			<div class="cols cols5">
 					<section class="first col">
