--- a/Home.html
+++ b/Home.html
@@ -25,9 +25,9 @@
 				<nav>
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
-							<li><a href="About.html" class="menuButton">About</a></li>
+							<li><a href="About.html" class="menuButton">About&nbsp;&nbsp;&nbsp;</a></li>
 							<li><a href="Contact.html" class="menuButton">Contact</a></li>
-							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ&nbsp;&nbsp;</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
 							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
 					</ul>
@@ -39,11 +39,11 @@
 					<div class="BodyText">
 							<h1>What is Bonsai?</h1>
 								<p>
-									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. Read about how to care for them in our <a href ="FAQ.html">FAQ page</a>. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
+									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. Read about how to care for them in our <a href ="FAQ.html"><b>FAQ page</b></a>. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
 								</p>
 								<br /> 
 							<h1>Gallery</h1>
-								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html">online store</a> to get started, and <a href="Contact.html">send us</a> your artistry later on so we can share it here, too :)</p>
+								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html"><b>online store</b></a> to get started, and <a href="Gallery.html"><b>send us</b></a> your artistry later on so we can share it here, too :)</p>
 								<p>(add images of other fancy bonsai trees)</p>
 								<br />
 							<!--<h1>How to care for Bonsai Trees</h1>
