Adding image to Home page

--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
 								<br /> 
 							<h1>Gallery</h1>
 								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html"><b>online store</b></a> to get started, and <a href="Gallery.html"><b>send us</b></a> your artistry later on so we can share it here, too :)</p>
-								<p>(add images of other fancy bonsai trees)</p>
+								<a href ="Gallery.html"><img src ="images/GalleryPhotos/Tree2.jpg" width="250" height="137" alt="Gallery Photo"/></a>
 								<br />
 							<!--<h1>How to care for Bonsai Trees</h1>
 							<div class="infograph1">
