More content to Home page

--- a/Home.html
+++ b/Home.html
@@ -37,6 +37,8 @@
 			<div class="cols cols5">
 				<section class="first col">
 					<div class="BodyText">
+							<h1>Hi!</h1>
+								<p>Welcome to Mini Trees! We <a href = "Bonsai_trees.html"><b>sell bonsai trees</b></a> to people who want to bring clean aesthetics to their home, as well as providing info on bonsai trees and <a href="FAQ.html"><b>how to take care of them</b></a>. We also allow people to <a href="Gallery.html"><b>upload photos</b></a> of their artwork, growing a commmunity of bonsai tree artists.</p>
 							<h1>What is Bonsai?</h1>
 								<p>
 									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. Read about how to care for them in our <a href ="FAQ.html"><b>FAQ page</b></a>. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
