--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -26,7 +26,7 @@
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton"><b>Shop</b></a></li>
 							<li><a href="About.html" class="menuButton">About&nbsp;&nbsp;&nbsp;</a></li>
-							<li><a href="Contact.html" class="menuButton">Contact</a></li>
+							<li><a href="Contact.html" class="menuButton">Contact&nbsp;</a></li>
 							<li><a href="FAQ.html" class="menuButton">FAQ&nbsp;&nbsp;</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
 							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
