--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -25,9 +25,9 @@
 				<nav>
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton"><b>Shop</b></a></li>
-							<li><a href="About.html" class="menuButton">About&nbsp;&nbsp;&nbsp;</a></li>
-							<li><a href="Contact.html" class="menuButton">Contact&nbsp;</a></li>
-							<li><a href="FAQ.html" class="menuButton">FAQ&nbsp;&nbsp;</a></li>
+							<li><a href="About.html" class="menuButton">About</a></li>
+							<li><a href="Contact.html" class="menuButton">Contact</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
 							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
 					</ul>
@@ -42,9 +42,11 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page.html">
+											<b>
 											White/Pink Azalea 
 											<br />
 											Price: $30
+											</b>
 										</a>
 									</p>
 								</div>
@@ -55,10 +57,12 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page2.html">
+											<b>
 											White/Pink Azalea 
 											Pastel Azalea
 											<br />
 											Price: $45
+											</b>
 										</a>
 									</p>
 								</div>
@@ -69,10 +73,12 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page3.html">
+											<b>
 											White/Pink Azalea 
 											Pink Azalea
 											<br />
 											Price: $25
+											</b>
 										</a>
 									</p>
 								</div>
@@ -83,10 +89,12 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page4.html">
+											<b>
 											White/Pink Azalea 
 											Pastel Pink Azalea
 											<br />
 											Price: $30
+											</b>
 										</a>
 									</p>
 								</div>
@@ -97,10 +105,12 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page5.html">
+											<b>
 											White/Pink Azalea 
 											Fuschia Azalea 
 											<br />
 											Price: $50
+											</b>
 										</a>
 									</p>
 								</div>
@@ -111,10 +121,12 @@
 								<div class="tree_name">
 									<p>
 										<a href = "Product_page6.html">
+											<b>
 											White/Pink Azalea 
 											White/Pink Azalea 
 											<br />
 											Price: $40
+											</b>
 										</a>
 									</p>
 								</div>
