--- a/Home.html
+++ b/Home.html
@@ -25,9 +25,9 @@
 				<nav>
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
-							<li><a href="About.html" class="menuButton">About&nbsp;&nbsp;&nbsp;</a></li>
+							<li><a href="About.html" class="menuButton">About</a></li>
 							<li><a href="Contact.html" class="menuButton">Contact</a></li>
-							<li><a href="FAQ.html" class="menuButton">FAQ&nbsp;&nbsp;</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
 							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
 					</ul>
@@ -47,7 +47,7 @@
 							<h1>Gallery</h1>
 								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html"><b>online store</b></a> to get started, and <a href="Gallery.html"><b>send us</b></a> your artistry later on so we can share it here, too :)</p>
 								<a href ="Gallery.html"><img src ="images/GalleryPhotos/Tree2.jpg" width="250" height="137" alt="Gallery Photo"/></a>
-								<a href ="Gallery.html"><img src ="images/GalleryPhotos/Tree3.jpg" width="250" height="137" alt="Gallery Photo"/></a>
+								<a href ="Gallery.html"><img src ="images/GalleryPhotos/Tree2.jpg" width="250" height="137" alt="Gallery Photo"/></a>
 								<br />
 							<!--<h1>How to care for Bonsai Trees</h1>
 							<div class="infograph1">
