--- a/About.html
+++ b/About.html
@@ -24,9 +24,9 @@
 				<nav>
 					<ul>
 							<li><a href="Bonsai_trees.html" class="menuButton">Shop</a></li>
-							<li><a href="About.html" class="menuButton"><b>About&nbsp;&nbsp;&nbsp;</b></a></li>
+							<li><a href="About.html" class="menuButton"><b>About</b></a></li>
 							<li><a href="Contact.html" class="menuButton">Contact</a></li>
-							<li><a href="FAQ.html" class="menuButton">FAQ&nbsp;&nbsp;</a></li>
+							<li><a href="FAQ.html" class="menuButton">FAQ</a></li>
 							<li><a href="Updates.html" class="menuButton">Updates</a></li>
 							<li><a href="Gallery.html" class="menuButton">Gallery</a></li>
 					</ul>
